# ir

./: Cargo.toml  README.md
src/: bytecode.rs  error.rs  expr.rs  lib.rs  main.rs  optimizer.rs  printer.rs  serializer.rs  stmt.rs  tokenizer.rs  value.rs  vm.rs
src/snapshots/: ir__bytecode__tests__test.snap  ir__bytecode__tests__vm.snap  ir__tokenizer__tests__add_assign.snap  ir__tokenizer__tests__ampersand.snap  ir__tokenizer__tests__and.snap  ir__tokenizer__tests__array.snap  ir__tokenizer__tests__bang.snap  ir__tokenizer__tests__colon.snap  ir__tokenizer__tests__comma.snap  ir__tokenizer__tests__div.snap  ir__tokenizer__tests__div_assign.snap  ir__tokenizer__tests__else_stmt.snap  ir__tokenizer__tests__equal.snap  ir__tokenizer__tests__equal_equal.snap  ir__tokenizer__tests__fn_call.snap  ir__tokenizer__tests__fn_decl.snap  ir__tokenizer__tests__for_loop.snap  ir__tokenizer__tests__greater_than_equal.snap  ir__tokenizer__tests__if_stmt.snap  ir__tokenizer__tests__langle.snap  ir__tokenizer__tests__less_than_equal.snap  ir__tokenizer__tests__mod_assign.snap  ir__tokenizer__tests__mul_assign.snap  ir__tokenizer__tests__not_equal.snap  ir__tokenizer__tests__number.snap  ir__tokenizer__tests__or.snap  ir__tokenizer__tests__pipe.snap  ir__tokenizer__tests__plus.snap  ir__tokenizer__tests__print.snap  ir__tokenizer__tests__rangle.snap  ir__tokenizer__tests__rem.snap  ir__tokenizer__tests__semicolon.snap  ir__tokenizer__tests__string.snap  ir__tokenizer__tests__sub.snap  ir__tokenizer__tests__sub_assign.snap  ir__tokenizer__tests__times.snap  ir__vm__test__if.snap.new  (+2 more)
