[package]
name = "ir"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.39.0", features = ["yaml", "glob"] }
insta-cmd = "0.6.0"
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
